首屏图片展示分也加载完成，动态创建初始部分，百科分页加载完成（搜索参数待测试）

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "pages/search/search",
     "pages/dynamic/dynamic",
     "pages/article/article",
-    "pages/logs/logs"
+    "pages/buildDynamic/buildDynamic"
   ],
   "window": {
     "backgroundTextStyle": "light",
